--- a/src/styles/_food-basket.scss
+++ b/src/styles/_food-basket.scss
@@ -29,6 +29,14 @@
   }
 }
 
+.basket-indexes-and-date-container-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 3;
+  background-color: rgba(247, 247, 247, 0.8);
+}
+
 .food-composition-indexes {
   background-color: white;
   width: 80%;
