--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -51,13 +51,16 @@
 .day-in-month-btn {
   background-color: header.$full-opacity-color;
   font: header.$primary-font;
-  border: none;
   color: header.$primary-color;
+  border: none;
   cursor: pointer;
   position: absolute;
-  top: 0.1rem;
-  left: 0.1rem;
-  padding: 0.1rem 2rem 1.8rem 0.1rem;
+  margin: 0;
+  top: 0rem;
+  left: 0rem;
+  right: 0rem;
+  bottom: 0rem;
+  padding: 0.1rem 2rem 2rem 0.1rem;
 }
 
 .day-calorie-capacity {
