--- a/src/styles/_food-basket.scss
+++ b/src/styles/_food-basket.scss
@@ -72,13 +72,46 @@
   border-radius: 0.1rem;
 }
 
+@keyframes hideForWide {
+  from {
+      opacity: 1;
+      height: 8rem;
+  }
+  to {
+      opacity: 0;
+      height: 0;
+  }
+}
+
+@keyframes hideForSmall {
+  from {
+      opacity: 1;
+      height: 12rem;
+  }
+  to {
+      opacity: 0;
+      height: 0;
+  }
+}
+
 %item-container {
   border: header.$primary-border;
-  margin: 1rem;
-  min-width: 8rem;
-  width: 45%;
-  min-height: 8rem;
+  margin: 0.1rem;
+  width: 8rem;
+  // max-width: 8rem;
+  // width: 45%;
+  height: 8rem;
+  @media (max-width: 700px) {
+    animation-name: hideForSmall;
+  }
+  @media (min-width: 701px) {
+    animation-name: hideForWide;
+  }
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-play-state: paused;
 }
+
 .item-container {
   @extend %item-container;
   position: relative;
@@ -93,7 +126,7 @@
   }
   @media (max-width: 700px) {
     min-width: 75vw;
-    min-height: 50vw;
+    height: 12rem;
     margin: 0.1rem auto;
     h6 {
       font-size: 1.2rem;
