--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -135,6 +135,7 @@ body {
   }
   @media (max-width: 700px) {
     width: 100%;
+    padding: 0.5rem 0;
     border-bottom: 1 px solid rgb(129, 72, 117);
   }
 }
@@ -176,4 +177,5 @@ body {
   bottom: 0;
   min-height: 100vh;
   min-width: 100vw;
+  z-index: 4;
 }
