--- a/src/styles/categories-and-foods.scss
+++ b/src/styles/categories-and-foods.scss
@@ -3,12 +3,12 @@
 @use "form";
 
 .category-container {
-  min-width: 8rem;
-  max-width: 8rem;
-  height: 8rem;
+  // min-width: 10rem;
+  width: 10rem;
+  height: 10rem;
   border: header.$primary-border;
   border-radius: 0.2rem;
-  margin: 1rem;
+  margin: 0.1rem;
   background-color: white;
   box-shadow: header.$shadow;
   h4 {
@@ -21,8 +21,8 @@
     @include food-basket.item-img();
   }
   @media (max-width: 700px) {
-    min-width: 80vw;
-    min-height: 50vw;
+    min-width: 75vw;
+    min-height: 60vw;
     margin: 0.1rem auto;
     h4 {
       font-size: 1.2rem;
@@ -58,6 +58,13 @@
   height: calc(100vh - 2rem);
   @media (max-width: 700px) {
     max-width: 100%;
-    height: auto;
+    // height: auto;
   }
+}
+
+img.animated-gif {
+  display: block;
+  margin: 4rem auto;
+  width: 100px;
+  height: auto;
 }
