fixed error in food-items thunk and main flex container

--- a/src/styles/_food-basket.scss
+++ b/src/styles/_food-basket.scss
@@ -8,6 +8,7 @@
 .food-basket-container {
   border-left: header.$primary-border;
   height: 100vh;
+  // height: auto;
   width: 90%;
   margin: 0 auto;
   position: relative;
