--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 
 .flex-cont-for-main-and-basket {
   @include header.flex-container;
+  align-items: flex-start;
   width: 100%;
   main {
     flex: 3;
