--- a/src/styles/categories-and-foods.scss
+++ b/src/styles/categories-and-foods.scss
@@ -41,11 +41,11 @@
 .categories-container {
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
+  justify-content: center;
   @media (max-width: 700px) {
     width: 95%;
-    justify-content: center;
   }
   @media (max-width: 700px) {
     display: block;
@@ -55,10 +55,11 @@
 .foods-categories-container {
   @include form.main-container();
   width: 100%;
-  height: calc(100vh - 2rem);
+  min-height: calc(100vh - 2rem);
+  height: auto;
   @media (max-width: 700px) {
     max-width: 100%;
-    // height: auto;
+    height: auto;
   }
 }
 
