--- a/src/styles/_food-basket.scss
+++ b/src/styles/_food-basket.scss
@@ -39,7 +39,7 @@
 }
 
 .food-composition-indexes {
-  background-color: white;
+  background-color: header.$primary-background-color;
   width: 80%;
   border: none;
   border-radius: 0.2rem;
@@ -126,8 +126,8 @@
     @include item-img();
   }
   @media (max-width: 700px) {
-    min-width: 75vw;
-    height: 12rem;
+    min-width: 65vw;
+    min-height: 35vh;
     margin: 0.1rem auto;
     h6 {
       font-size: 1.2rem;
