--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -76,6 +76,15 @@
   padding: 0.2rem;
 }
 
+// $blue-day: rgb(194, 194, 248);
+// $green-day: rgb(129, 224, 129);
+// $yellow-day: rgb(255, 255, 134);
+// $orange-day: rgb(255, 222, 151);
+// $red-day: rgb(247, 159, 159);
+
+.blue-day {
+  background-color: rgb(194, 194, 248);
+}
 .green-day {
   background-color: rgb(129, 224, 129);
 }
@@ -88,6 +97,58 @@
 .red-day {
   background-color: rgb(247, 159, 159);
 }
-.blue-day {
-  background-color: rgb(194, 194, 248);
+
+.legend-day {
+  display: inline-block;
+  margin: 0.5rem 0.5rem 0 2rem;
+  height: 0.8rem;
+  width: 1.5rem;
+  border: 0.5px solid rgb(206, 204, 204);
+}
+
+.color-info-link {
+  display: block;
+  margin-right: auto;
+  position: relative;
+  font-weight: bold;
+  color: white;
+  padding: 0.3rem;
+  border: none;
+  border-radius: 50%;
+  background: linear-gradient(
+    rgba(255, 0, 0, 1) 0%,
+    rgba(255, 0, 0, 1) 10%,
+    rgba(255, 154, 0, 1) 20%,
+    rgba(208, 222, 33, 1) 30%,
+    rgba(79, 220, 74, 1) 40%,
+    rgba(63, 218, 216, 1) 50%,
+    rgba(47, 201, 226, 1) 60%,
+    rgba(28, 127, 238, 1) 70%,
+    rgba(95, 21, 242, 1) 80%,
+    rgba(186, 12, 248, 1) 90%
+  );
+}
+
+.color-info-tooltip {
+  font-weight: normal;
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  visibility: hidden;
+  min-width: 3rem;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  z-index: 1;
+  padding: 0.5rem;
+}
+
+.color-info-link:hover div {
+  visibility: visible;
+}
+
+.legend-text {
+  font-size: 0.9rem;
 }
