--- a/src/styles/categories-and-foods.scss
+++ b/src/styles/categories-and-foods.scss
@@ -9,7 +9,8 @@
   border: header.$primary-border;
   border-radius: 0.2rem;
   margin: 0.1rem;
-  background-color: white;
+  // background-color: white;
+  background-color: header.$primary-background-color;
   box-shadow: header.$shadow;
   h4 {
     font-size: 1rem;
@@ -59,7 +60,6 @@
   height: auto;
   @media (max-width: 700px) {
     max-width: 100%;
-    height: auto;
   }
 }
 
