--- a/src/components/styles/_form.scss
+++ b/src/components/styles/_form.scss
@@ -23,6 +23,9 @@
       font-size: 1.4rem;
     }
   }
+  @media (max-height: 800px) {
+    height: calc(150vh - 4rem);
+  }
 }
 
 .unified-container {
